[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/HUD/background.png" type="Texture" id=1]
[ext_resource path="res://assets/HUD/coracao.png" type="Texture" id=2]
[ext_resource path="res://assets/HUD/barravidas.png" type="Texture" id=3]
[ext_resource path="res://assets/HUD/perfil.png" type="Texture" id=4]
[ext_resource path="res://assets/HUD/backgroundprog.png" type="Texture" id=5]
[ext_resource path="res://assets/HUD/barraxp.png" type="Texture" id=6]
[ext_resource path="res://assets/HUD/bomba.png" type="Texture" id=7]
[ext_resource path="res://assets/Fonts/PressStart2P-Regular.ttf" type="DynamicFontData" id=8]
[ext_resource path="res://screens/HUD.gd" type="Script" id=9]

[sub_resource type="DynamicFont" id=1]
size = 10
font_data = ExtResource( 8 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 9 )

[node name="Background" type="TextureRect" parent="."]
margin_left = 406.994
margin_top = 516.31
margin_right = 656.994
margin_bottom = 576.31
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Perfil" type="TextureRect" parent="."]
margin_left = 415.0
margin_top = 523.0
margin_right = 459.0
margin_bottom = 570.0
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BarraVida" type="TextureProgress" parent="."]
margin_left = 479.666
margin_top = 523.5
margin_right = 648.666
margin_bottom = 541.5
step = 20.0
value = 50.0
texture_under = ExtResource( 5 )
texture_progress = ExtResource( 3 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Coracao" type="TextureRect" parent="BarraVida"]
margin_left = -14.2509
margin_top = -2.55847
margin_right = 10.7491
margin_bottom = 19.4415
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BarraXP" type="TextureProgress" parent="."]
margin_left = 482.0
margin_top = 550.0
margin_right = 649.0
margin_bottom = 570.0
step = 10.0
value = 30.0
texture_under = ExtResource( 5 )
texture_progress = ExtResource( 6 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bomba" type="TextureRect" parent="BarraXP"]
margin_left = -17.2474
margin_top = -6.12372
margin_right = 6.75256
margin_bottom = 20.8763
texture = ExtResource( 7 )
expand = true

[node name="LabelTesouro" type="Label" parent="."]
margin_left = 409.0
margin_top = 493.0
margin_right = 653.0
margin_bottom = 509.0
custom_fonts/font = SubResource( 1 )
text = "Tesouros encontrados: 0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
